added mock server and envs

--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "main": "electron/electron.js",
   "homepage": "./",
   "scripts": {
-    "dev-web": "react-scripts start",
-    "dev-electron": "concurrently --kill-others \"cross-env BROWSER=none react-scripts start\" \"node electron/electron-wait-react\"",
-    "dev-both": "concurrently \"react-scripts start\" \"node electron/electron-wait-react\"",
-    "build": "react-scripts build",
-    "build-with-electron": "yarn build && fcli copy electron build",
-    "test": "tsc && react-scripts test",
-    "package": " yarn build-with-electron && electron-builder build --mwl",
-    "package-win": "yarn build-with-electron && electron-builder build --win",
+    "mock-server": "node mock-server/server.js",
+    "dev-react": "env-cmd -f development.env react-scripts start",
+    "dev-web": "concurrently --kill-others \"yarn mock-server\" \"yarn dev-react\"",
+    "dev-electron": "concurrently --kill-others \"yarn mock-server\" \"cross-env BROWSER=none yarn dev-react\" \"node electron/electron-wait-react\"",
+    "dev-both": "concurrently \"yarn mock-server\" \"dev-react\" \"node electron/electron-wait-react\"",
+    "test": "env-cmd -f test.env tsc && react-scripts test",
+    "staging-build": "env-cmd -f staging.env react-scripts build",
+    "staging-build-electron": "yarn staging-build && fcli copy electron build",
+    "staging-package": " yarn staging-build-electron && electron-builder build --mwl",
+    "staging-package-win": "yarn staging-build-electron && electron-builder build --win",
+    "production-build": "env-cmd -f production.env react-scripts build",
+    "production-build-electron": "yarn production-build && fcli copy electron build",
+    "production-package": " yarn production-build-electron && electron-builder build --mwl",
+    "production-package-win": "yarn production-build-electron && electron-builder build --win",
     "postinstall": "electron-builder install-app-deps"
   },
   "eslintConfig": {
@@ -32,13 +38,7 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@material-ui/styles": "^4.9.0",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/string-template": "^1.0.2",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
@@ -49,18 +49,28 @@
     "string-template": "^1.0.0"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/styles": "^4.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/string-template": "^1.0.2",
     "babel-jest": "^24.9.0",
     "concurrently": "^5.1.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "electron": "^8.1.0",
     "electron-builder": "^22.4.0",
     "electron-devtools-installer": "^2.2.4",
+    "env-cmd": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "express": "^4.17.1",
     "file-cli": "^1.2.0",
     "foreman": "^3.0.1",
     "jest": "^24.9.0",
